[gd_scene load_steps=7 format=3 uid="uid://lfl17nii2bj0"]

[ext_resource type="Script" path="res://scripts/interface/map/max.gd" id="1_ubouj"]
[ext_resource type="Texture2D" uid="uid://cw7v04osxlr3g" path="res://assets/interface/top_right/map/max_map_mask.png" id="2_qsbdb"]
[ext_resource type="Texture2D" uid="uid://bv1y2ps3ar3xn" path="res://assets/interface/common/close_button_0.png" id="3_jlkoy"]
[ext_resource type="Texture2D" uid="uid://dajrp5tujblkg" path="res://assets/interface/common/close_button_1.png" id="4_l8fr3"]
[ext_resource type="Texture2D" uid="uid://brfg4bgiicas4" path="res://assets/interface/common/close_button_2.png" id="5_unbwc"]
[ext_resource type="Texture2D" uid="uid://cdnosdwmkana8" path="res://assets/interface/top_right/map/player.png" id="6_co60e"]

[node name="MaxMain" type="Control"]
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ubouj")

[node name="MaxMapMask" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -264.0
offset_top = -200.5
offset_right = 264.0
offset_bottom = 200.5
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_qsbdb")

[node name="DragButton" type="TextureButton" parent="MaxMapMask"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -259.0
offset_top = -200.5
offset_right = 259.0
offset_bottom = 200.5
grow_horizontal = 2
grow_vertical = 2

[node name="CloseButton" type="TextureButton" parent="MaxMapMask"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -45.0
offset_top = 27.0
offset_right = -24.0
offset_bottom = 49.0
grow_horizontal = 0
texture_normal = ExtResource("3_jlkoy")
texture_pressed = ExtResource("4_l8fr3")
texture_hover = ExtResource("5_unbwc")

[node name="Main" type="Control" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2

[node name="MainContainer" type="SubViewportContainer" parent="Main"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -240.0
offset_top = -138.0
offset_right = 240.0
offset_bottom = 181.0
grow_horizontal = 2
grow_vertical = 2

[node name="MainViewport" type="SubViewport" parent="Main/MainContainer"]
handle_input_locally = false
size = Vector2i(480, 320)
render_target_update_mode = 4

[node name="MainViewportLocation" type="TextureRect" parent="Main/MainContainer/MainViewport"]
offset_right = 7.0
offset_bottom = 7.0
texture = ExtResource("6_co60e")

[node name="MainViewportCamera" type="Camera2D" parent="Main/MainContainer/MainViewport"]
zoom = Vector2(0.02, 0.02)

[connection signal="button_down" from="MaxMapMask/DragButton" to="." method="_on_drag_button_button_down"]
[connection signal="button_up" from="MaxMapMask/DragButton" to="." method="_on_drag_button_button_up"]
[connection signal="pressed" from="MaxMapMask/CloseButton" to="." method="_on_close_button_pressed"]
